Add swagger ui for new API endpoints. Modify schema for future assessment data
